[package]
name = "message_broker"
version = "0.1.0"
edition = "2021"

[build]
# rustflags = ["--cfg", "tokio_unstable"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15.0", features = ["full", "tracing"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"
console-subscriber = "0.1.4"
anyhow = "1.0.57"
thiserror = "1.0.31"
bytes = "1.1.0"